# StudBud

./: .gitignore  README.md  pyproject.toml  rxconfig.py
.web/: bun.lockb  package-lock.json  package.json  reflex.json
.web/pages/: dashboard.js  index.js  settings.js  uni.js  users.js
.web/utils/: context.js
alembic/versions/: 4ba25274d51c_something_changed.py  a08b6b5e0697_.py
app/: app.py  classes.csv  models.py  styles.py  universities.csv
app/components/: navbar.py
app/pages/: __init__.py  uniquery.py  users.py
app/templates/: template.py
